# local-llm-notepad

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: chat_gui.py  config.py  hook-llama_cpp.py  llm_utils.py  main.py
